# gridcommand

./: .gitignore  .noserc  .pep257  .pep8rc  .prettierrc.toml  .project  .pydevproject  .pylintrc  .travis.yml  CONTRIBUTING.md  LICENSE.txt  Makefile  Procfile  README.md  app.json  app.py  gridcommand.kv  main.py  manage.py  mkdocs.yml  pyproject.toml  requirements.txt  run.py  scent.py  setup.cfg  setup.py  test.py
.github/workflows/: main.yml
app/: actions.py  constants.py  enums.py  models.py  types.py  views.py
app/templates/: base.html  board.html  cell.html  index.html  menu.html  moves.html
app/templates/menu/: choose.html  done.html  next.html  plan.html  setup.html
data/games/: 01_created.yml  02_added.yml  03_started.yml  04_playing.yml  _created_.yml  _started_.yml  _test.yml
data/gamess/: 1.yml
gridcommand/: __init__.py  api.py  app.py  common.py  config.py  data.py  manage.py  models.py  views.py
gridcommand/domain/: __init__.py  board.py  game.py  move.py  player.py  turn.py  types.py
gridcommand/games/: __init__.py  models.py  permissions.py  serializers.py  urls.py  views.py
gridcommand/games/migrations/: 0001_initial.py  0002_game_code.py  0003_game_owner.py  0004_player.py  0005_player_game.py
gridcommand/gridcommand/: __init__.py  settings.py  urls.py  wsgi.py
gridcommand/models/: __init__.py  game.py  move.py  phase.py  player.py  turn.py
gridcommand/routes/: __init__.py  _bases.py  _formatters.py  formatters.py  game.py  games.py  move.py  moves.py  parsers.py  player.py  players.py  root.py  turn.py  turns.py  web.py
gridcommand/services/: __init__.py  _bases.py  base.py  game.py
gridcommand/static/: board.js  game.js  index.js  join.js
gridcommand/stores/: __init__.py  base.py  game.py
gridcommand/templates/: base.html  board.html  game.html  index.html  join.html  layout.html
gridcommand/test/: __init__.py  conftest.py  test_api.py  test_models.py  test_stores_game.py  test_views.py
gridcommand/tests/: conftest.py  fixtures.py  test_services_game.py  test_stores_game.py  utils.py
gridcommand/views/: __init__.py  game.py  move.py  phase.py  player.py  root.py  turn.py
templates/: base.html  board.html  cell.html  game.html  menu.html  players.html
templates/menu/: choose.html  done.html  next.html  plan.html
tests/: Procfile  __init__.py  conftest.py  e2e.py  fixtures.py  test_actions.py  test_all.py  test_constants.py  test_models.py  utils.py
tests/files/: test.yml
tests/models/: __init__.py  test_game.py  test_move.py  test_phase.py  test_player.py  test_turn.py
tests/views/: __init__.py  test_game.py  test_move.py  test_phase.py  test_player.py  test_root.py  test_turn.py
(+24 files in other folders)
