[tool.poetry]

name = "gridcommand"
version = "0.0"
description = "A grid-based clone of Same Time Risk."
authors = ["Jace Browning <jacebrowning@gmail.com>"]

[tool.poetry.dependencies]

python = "^3.9"

flask = "^2.1"
datafiles = "^1.4b3"
minilog = "^2.1"

[tool.poetry.dev-dependencies]

black = "^22.3.0"
isort = "^5.10.1"

autoflake = "^1.4"
mypy = "^0.942"

pomace = "^0.10"

livereload = "=2.5.1"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true

plugins = "datafiles.plugins:mypy"

cache_dir = ".cache/mypy/"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
