[tool.poetry]

name = "gridcommand"
version = "1.0"
description = "Grid-based clone of Same Time Risk."
authors = ["Jace Browning <jacebrowning@gmail.com>"]

packages = [{ include = "app" }]

[tool.poetry.dependencies]

python = "^3.9"

flask = "^2.1"

datafiles = "^1.4b3"
minilog = "^2.1"

gunicorn = "^20.1"

[tool.poetry.dev-dependencies]

black = "^22.3.0"
isort = "^5.10.1"

autoflake = "^1.4"
mypy = "^0.942"

pytest = "^7.1.2"
pomace = "^0.10.1"

livereload = "=2.5.1"
honcho = "^1.1.0"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true

plugins = "datafiles.plugins:mypy"

cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]

cache_dir = ".cache/pytest/"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
