[tool.poetry]

name = "gridcommand"
version = "1.0"
description = "Grid-based clone of Same Time Risk."
authors = ["Jace Browning <jacebrowning@gmail.com>"]

packages = [{ include = "app" }]

[tool.poetry.dependencies]

python = "^3.9"

flask = "^2.1"

datafiles = "^2.0"
minilog = "^2.1"

gunicorn = "^20.1"

[tool.poetry.dev-dependencies]

black = "^22.3.0"
isort = "^5.10.1"

autoflake = "^1.4"
mypy = "^0.961"

pytest = "^7.1.2"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
pytest-cov = "*"
pytest-watch = "^4.2.0"
pomace = "^0.11"

livereload = "=2.5.1"
honcho = "^1.1.0"

[tool.black]

quiet = true

[tool.isort]

profile = "black"

[tool.mypy]

ignore_missing_imports = true

plugins = "datafiles.plugins:mypy"

cache_dir = ".cache/mypy/"

[tool.pytest.ini_options]

log_level = "DEBUG"

addopts = "--no-header --random --cov=app --cov-report=term-missing:skip-covered --cov-report=html:.cache/htmlcov --no-cov-on-fail"

cache_dir = ".cache/pytest/"

[build-system]

requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
